Bug 527086: [java9] Support Java 9 - adjust order of expected compiler messages - adjust expectation to changes in Annotation.toString() - switch some more tests to OTDRE by default - refresh AbstractOTJLDNullAnnotationTest - avoid deprecated boxing constructors